##############################################################################
#
# Name: setup.cfg
#
# Function:
#       Python setup information for this app.
#
# Copyright notice and license:
#       See LICENSE.md
#
# Author:
#       Terry Moore
#
##############################################################################

[metadata]
name = commission_aep
version = attr: commission_aep.__version__

[options]
packages = commission_aep

install_requires =
    requests >= 2.31.0

# include_package_data = True

[options.entry_points]
console_scripts =
    commission_aep = commission_aep.__main__:main

[options.package_data]
commission_aep =
    *.json
