##############################################################################
#
# Name: setup.cfg
#
# Function:
#       Python setup information for this app.
#
# Copyright notice and license:
#       See LICENSE.md
#
# Author:
#       Terry Moore
#
##############################################################################

[metadata]
name = aep_to_ttn_mlinux
version = attr: aep_to_ttn_mlinux.__version__

[options]
packages = aep_to_ttn_mlinux

install_requires =
    requests >= 2.31.0

# include_package_data = True

[options.entry_points]
console_scripts =
    aep_to_ttn_mlinux = aep_to_ttn_mlinux.__main__:main

[options.package_data]
aep_to_ttn_mlinux =
    *.json
